HealthCheck/Pocs.HealthCheck/Route-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingressgft
  namespace: template
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: health.brazilsouth.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: svc-healthcheck
          servicePort: http
